--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <!-- Your styles should be called here -->
 
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -26,32 +28,56 @@
     <!-- YOUR CONTENT GOES HERE -->
     <h1>Singer-Songwriter Art Auré Speaks About Her Uplifting Music and Its Influences<h1>
         <h2>By: Kayla Boone
-          <img src="=phil.jpg" width="600px">
           <h2 />
 
-          <p> Soulful rising star and D.C. native Art Auré has a voice and energy that are unmatched. A singer-songwriter who attended the Duke Ellington School of the Arts, she recently released her motivational single “Keep On.” She spoke with City
+          <img src="ART.jpg">
+
+
+
+
+          <p> Soulful rising star and D.C. native Art Auré has a voice and energy that are unmatched. A singer-songwriter who attended the Duke Ellington School of the Arts, she recently released her motivational single “Keep On.” She spoke with
+            City
             Paper about the message behind the song, and provided a glimpse into her musical influences.
+
+            <img src="musicnote.svg">
 
           <p>WCP: When was the moment that you knew music was your calling?
             <p />
 
-          <p>AA: I knew music was my calling around the age of 6 or 7 years old. My parents are originally from Gary, Indiana, so Michael Jackson and the Jackson 5 have been in our household, playing in the stereos and car and everything. I saw The
-            Jacksons: An American Dream. Once I saw Jason Weaver and all of the other amazing actors, I was like, I have to do that. I started writing songs actually when I was 6, and when I discovered that I can sing, I just kept doing it. That was
+          <p>AA: I knew music was my calling around the age of 6 or 7 years old. My parents are originally from Gary, Indiana, so Michael Jackson and the Jackson 5 have been in our household, playing in the stereos and car and everything. I saw
+            The
+            Jacksons: An American Dream. Once I saw Jason Weaver and all of the other amazing actors, I was like, I have to do that. I started writing songs actually when I was 6, and when I discovered that I can sing, I just kept doing it. That
+            was
             the thing that made me happy, and when something makes you happy, it’s like, you gotta roll with it.
             <p />
+
+            <img src="voting.svg">
 
           <p>WCP: Your song was chosen as a theme for Black Women for Biden leading up to the election. How do you feel about his choice of running mate Sen. Kamala Harris?
             <p />
 
-          <p>AA: I love it! I love the fact that Joe Biden chose a woman of color to be his running mate. For one, history is being made. You don’t see that. We’ve never seen that in our country, at least. That means that change is coming and we have
+          <p>AA: I love it! I love the fact that Joe Biden chose a woman of color to be his running mate. For one, history is being made. You don’t see that. We’ve never seen that in our country, at least. That means that change is coming and we
+            have
             to keep on. I really feel like people are going to use their common sense and change is inevitable, especially now. How do you not choose somebody that’s for the people?
             <p />
+
+            <img src="head.svg">
 
           <p>WCP: You’ve been a show opener. How do you mentally prepare for a performance knowing that you are setting the tone for the rest of the show?
             <p />
           <p>AA: It comes with years of doing it. You’re always going to have nerves. It’s just like practice, the more you do it, your muscle memory becomes more prevalent in your body and starts to form its tone and shape when you do it for so
             long.
             The nerves are never going to go away. I’m sure you heard people say if you don’t have nerves, it’s not a good thing.
+            <p />
+
+
+            <img src="calm.svg">
+
+          <p>WCP: Do you have a savior song—a song that you listen to when you’re going through tough times?
+            <p />
+          <p>AA: Absolutely, I’m all about positive music. One of my favorite songs is a song by Donny Hathaway called “Someday We’ll All Be Free.” It’s talking to the Black community and saying, even though we’re going through this, you gotta
+            keep
+            going. Just the chord progressions and the way he’s singing it resonates. Earth, Wind & Fire, “Keep Your Head to the Sky,” that’s one of my favorite songs as well. All positive music, that’s what’s in my head.
             <p />
 
 
